Prevent giganti-wide history popover, add extra padding to popover

--- a/client/search-ui/src/input/SearchHistoryDropdown.module.scss
+++ b/client/search-ui/src/input/SearchHistoryDropdown.module.scss
@@ -1,10 +1,11 @@
 @import 'wildcard/src/global-styles/breakpoints';
 
 .list {
-    padding: 0;
+    padding: .25rem 0;
     margin: 0;
     list-style: none;
     font-size: var(--code-font-size);
+    max-width: 55rem;
 
     li {
         padding: 0.25rem 1rem;
